@@ -277,6 +277,6 @@ public class WebViewPropertyForm extends PropertyForm {
    @Override
    protected void afterRender() {
       super.afterRender();
-      ((PropertyPanel)this.getParent()).setHeading("Label properties");
+      ((PropertyPanel)this.getParent()).setHeading("Web View properties");
    }
 }
